# ne_trans

./: NEWS  README  README.md  configure.ac
ne_trans/: DATA.txt  load_regexes.cpp  load_regexes_test.cpp  ne_recognizer.cpp  ne_recognizer.h  ne_recognizer_resource.cpp  ne_recognizer_resource.h  ne_trans_resource.cpp  ne_trans_resource.h
utils/: Makefile.am  boost_regex.cpp  boost_regex_work.cpp  boost_regex_work.h  wchar_converter.cpp  wchar_converter.h  wchar_converter_test.cpp
